Im crazy at what I do 😭 (Masjid Switcher and so much more you gotta check it yourself)

--- a/app/globals.css
+++ b/app/globals.css
@@ -566,3 +566,8 @@ h3.tiptap-heading + h2.tiptap-heading {
     min-width: 500px;
   }
 }
+
+#nprogress .bar {
+  background: #550C18 !important;
+  height: 4px !important;
+}
