--- a/app/globals.css
+++ b/app/globals.css
@@ -571,3 +571,21 @@ h3.tiptap-heading + h2.tiptap-heading {
   background: #550C18 !important;
   height: 4px !important;
 }
+
+.line-validation-highlight {
+  background-color: rgba(9, 9, 11, 0.2);
+  transition: background-color 0.3s ease;
+}
+
+h1 {
+  font-size: 2.25rem;
+}
+h2 {
+  font-size: 1.5rem;
+}
+h3 {
+  font-size: 1.25rem;
+}
+h4 {
+  font-size: 1rem;
+}
