--- a/app/globals.css
+++ b/app/globals.css
@@ -77,6 +77,7 @@
     background-color: hsl(var(--background));
     color: hsl(var(--foreground));
     font-feature-settings: "rlig" 1, "calt" 1;
+    overflow-x: hidden;
   }
   h1 {
     font-size: 75px;
